# campus_version

./: .gitignore  CMakeLists.txt  README.md  main.cpp
armor_src/: armors_select.cpp  cnn_recognize.cpp  draw_armors.cpp  find_contours.cpp  img_process.cpp  kalamn_filter.cpp
buff_src/: buff_cnn.cpp  buff_detect.cpp  buff_judge.cpp  buff_pnp.cpp  buff_predict.cpp  buff_recognize.cpp  buff_solve.cpp  circle.cpp  find_r.cpp
config/: buff.onnx  config.yaml  nn.onnx  number_recognize.onnx
include/: Armor_manage.h  Decision_making.h  Light_bar.h
include/Armor/: Armor.h  Armor_manage.h  Decision_making.h  Light_bar.h
include/Buff/: Buff.h  Buff_manage.h
src/: armors_select.cpp  decision_makeing.cpp  draw_armors.cpp  find_contours.cpp  img_process.cpp  kalamn_filter.cpp  pose_estimation.cpp
